src/objects/Management_IP__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Azimuth__c</fullName>
        <label>Azimuth</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Clone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Clone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Default_Gateway__c</fullName>
        <formula>IF(Site__r.Parent_Default_Gateway__c  =  Name , &quot;&quot;, Site__r.Parent_Default_Gateway__c)</formula>
        <label>Default Gateway</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Management Device Type</label>
        <referenceTo>Management_Device_Type__c</referenceTo>
        <relationshipLabel>Management IPs</relationshipLabel>
        <relationshipName>Management_IPs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Domain__c</fullName>
        <formula>Hostname__c  &amp; &quot;.&quot; &amp; Site__r.Domain__c</formula>
        <label>Domain</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Elevation__c</fullName>
        <label>Elevation</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hostname__c</fullName>
        <label>Hostname</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Limited_VPN_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Allows Customer Services to access the Managment IP from their VPNs</inlineHelpText>
        <label>Customer Service Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MAC_Address__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>MAC Address</label>
        <length>17</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Management_IP_Port_Assignment_Count__c</fullName>
        <label>Management IP Port Assignment Count</label>
        <summaryForeignKey>Management_IP_Port_Assignment__c.Management_IP__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PPPoE_VLAN__c</fullName>
        <inlineHelpText>The PPPoE Per Sector C-Tag VLAN</inlineHelpText>
        <label>PPPoE VLAN</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PTP__c</fullName>
        <formula>Device__r.PTP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PTP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remote_Device__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Remote Device</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2 AND (3 OR 4)</booleanFilter>
            <errorMessage>Device Type must match Remote Device Type</errorMessage>
            <filterItems>
                <field>$Source.Device__c</field>
                <operation>equals</operation>
                <valueField>Management_IP__c.Device__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.Id</field>
                <operation>notEqual</operation>
                <valueField>Management_IP__c.Id</valueField>
            </filterItems>
            <filterItems>
                <field>Management_IP__c.Remote_Device__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>Management_IP__c.Remote_Device__r.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Management_IP__c</referenceTo>
        <relationshipLabel>Management IPs</relationshipLabel>
        <relationshipName>Remote_Device</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SSID__c</fullName>
        <label>SSID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sector_SSID__c</fullName>
        <label>Sector SSID</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Show</fullName>
                </value>
                <value>
                    <fullName>Hide</fullName>
                </value>
                <value>
                    <fullName>Auto</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sector__c</fullName>
        <formula>IF( AND(RIGHT( Hostname__c , 5) == &quot;.ptmp&quot;, NOT(CONTAINS(LEFT(Hostname__c, LEN(Hostname__c) - 5), &quot;.&quot;))), True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sector</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Siklu_Channel_Bandwidth__c</fullName>
        <label>Channel Bandwidth</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>125</fullName>
                </value>
                <value>
                    <fullName>250</fullName>
                </value>
                <value>
                    <fullName>500</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Siklu_Mode__c</fullName>
        <label>Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>master</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>slave</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Siklu_PTP__c</fullName>
        <formula>Device__r.Siklu_PTP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Siklu PTP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Siklu_Rx_Link_Id__c</fullName>
        <label>Rx Link Id</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Siklu_Tx_Frequency__c</fullName>
        <label>Tx Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Siklu_Channel_Bandwidth__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>71937.5</fullName>
                </value>
                <value>
                    <fullName>72062.5</fullName>
                </value>
                <value>
                    <fullName>72187.5</fullName>
                </value>
                <value>
                    <fullName>72312.5</fullName>
                </value>
                <value>
                    <fullName>72437.5</fullName>
                </value>
                <value>
                    <fullName>72562.5</fullName>
                </value>
                <value>
                    <fullName>72687.5</fullName>
                </value>
                <value>
                    <fullName>72812.5</fullName>
                </value>
                <value>
                    <fullName>72937.5</fullName>
                </value>
                <value>
                    <fullName>73062.5</fullName>
                </value>
                <value>
                    <fullName>73187.5</fullName>
                </value>
                <value>
                    <fullName>73312.5</fullName>
                </value>
                <value>
                    <fullName>73437.5</fullName>
                </value>
                <value>
                    <fullName>73562.5</fullName>
                </value>
                <value>
                    <fullName>73687.5</fullName>
                </value>
                <value>
                    <fullName>73812.5</fullName>
                </value>
                <value>
                    <fullName>73937.5</fullName>
                </value>
                <value>
                    <fullName>74062.5</fullName>
                </value>
                <value>
                    <fullName>74187.5</fullName>
                </value>
                <value>
                    <fullName>74312.5</fullName>
                </value>
                <value>
                    <fullName>74437.5</fullName>
                </value>
                <value>
                    <fullName>74562.5</fullName>
                </value>
                <value>
                    <fullName>74687.5</fullName>
                </value>
                <value>
                    <fullName>74812.5</fullName>
                </value>
                <value>
                    <fullName>74937.5</fullName>
                </value>
                <value>
                    <fullName>75062.5</fullName>
                </value>
                <value>
                    <fullName>75187.5</fullName>
                </value>
                <value>
                    <fullName>75312.5</fullName>
                </value>
                <value>
                    <fullName>75437.5</fullName>
                </value>
                <value>
                    <fullName>75562.5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Siklu_Tx_Link_Id__c</fullName>
        <label>Tx Link Id</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Management Site</label>
        <referenceTo>Management_Site__c</referenceTo>
        <relationshipLabel>Management IPs</relationshipLabel>
        <relationshipName>Management_IPs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subnet_PPPoE_VLAN__c</fullName>
        <formula>Subnet__c +  TEXT(PPPoE_VLAN__c)</formula>
        <label>Concat Subnet PPPoE VLAN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subnet_Siklu_Rx_Link_Id__c</fullName>
        <formula>Subnet__c + TEXT( Siklu_Rx_Link_Id__c )</formula>
        <label>Concat Subnet Rx Link Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subnet_Siklu_Tx_Link_Id__c</fullName>
        <formula>Subnet__c + TEXT( Siklu_Tx_Link_Id__c )</formula>
        <label>Concat Subnet Tx Link Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subnet__c</fullName>
        <formula>Site__r.Parent_Subnet__c</formula>
        <label>Subnet</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VLAN__c</fullName>
        <formula>Site__r.Parent_VLAN__c</formula>
        <label>VLAN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Management IP</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Domain__c</columns>
        <columns>Device__c</columns>
        <columns>Site__c</columns>
        <columns>Comment__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>PPPoE_VLAN__c</columns>
        <columns>MAC_Address__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Denaby</fullName>
        <columns>NAME</columns>
        <columns>Domain__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Site__c</field>
            <operation>equals</operation>
            <value>Denaby</value>
        </filters>
        <label>Denaby</label>
    </listViews>
    <listViews>
        <fullName>Gatwick</fullName>
        <columns>NAME</columns>
        <columns>Domain__c</columns>
        <columns>Device__c</columns>
        <columns>Site__c</columns>
        <columns>Comment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Domain__c</field>
            <operation>contains</operation>
            <value>gatwick.hu.uk.cxn-network.net</value>
        </filters>
        <label>Gatwick</label>
    </listViews>
    <nameField>
        <label>IP Address</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Management IPs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Prevent_Change_Device_Type_with_Ports</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISCHANGED( Device__c ) ,  Management_IP_Port_Assignment_Count__c &gt; 0)</errorConditionFormula>
        <errorDisplayField>Device__c</errorDisplayField>
        <errorMessage>Cannot change Management Device Type with Assigned Ports</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rx_Link_Id_Range</fullName>
        <active>true</active>
        <errorConditionFormula>AND( Siklu_Rx_Link_Id__c &lt; 0 ,  Siklu_Rx_Link_Id__c &gt; 127)</errorConditionFormula>
        <errorDisplayField>Siklu_Rx_Link_Id__c</errorDisplayField>
        <errorMessage>Rx Link Id must be between 0 and 127</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Tx_Link_Id_Range</fullName>
        <active>true</active>
        <errorConditionFormula>AND( Siklu_Tx_Link_Id__c &lt; 0 ,  Siklu_Tx_Link_Id__c &gt; 127)</errorConditionFormula>
        <errorDisplayField>Siklu_Tx_Link_Id__c</errorDisplayField>
        <errorMessage>Tx Link Id must be between 0 and 127</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Valid_MAC_Address</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
AND(Active__c = false, MAC_Address__c = &quot;&quot;),AND( Active__c = true,
AND(NOT(REGEX( MAC_Address__c , &quot;(([A-F]|[0-9]){2}:){5}([A-F]|[0-9]){2}&quot;)), MAC_Address__c != &quot;&quot;)))</errorConditionFormula>
        <errorDisplayField>MAC_Address__c</errorDisplayField>
        <errorMessage>Invalid MAC Address</errorMessage>
    </validationRules>
</CustomObject>